compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__custom_types__const_imported_using_label.snap
---
source: compiler-core/src/javascript/tests/custom_types.rs
assertion_line: 526
expression: "import other\npub const main = other.Two(field: 1)\n"
---
----- SOURCE CODE
import other
pub const main = other.Two(field: 1)


----- COMPILED JAVASCRIPT
import * as $other from "../other.mjs";

export const main = /* @__PURE__ */ new $other.Two(1);
