compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__custom_types__const_unqualified_imported_multiple_fields.snap
---
source: compiler-core/src/javascript/tests/custom_types.rs
assertion_line: 592
expression: "import other.{Two}\npub const main = Two(b: 2, c: 3, a: 1)\n"
---
----- SOURCE CODE
import other.{Two}
pub const main = Two(b: 2, c: 3, a: 1)


----- COMPILED JAVASCRIPT
import * as $other from "../other.mjs";
import { Two } from "../other.mjs";

export const main = /* @__PURE__ */ new Two(1, 2, 3);
