compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__custom_types__const_zero_arity_imported.snap
---
source: compiler-core/src/javascript/tests/custom_types.rs
assertion_line: 104
expression: "import other\nconst x = other.Two\n"
---
----- SOURCE CODE
import other
const x = other.Two


----- COMPILED JAVASCRIPT
import * as $other from "../other.mjs";

const x = /* @__PURE__ */ new $other.Two();
