compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__custom_types__const_zero_arity_imported_unqualified.snap
---
source: compiler-core/src/javascript/tests/custom_types.rs
assertion_line: 114
expression: "import other.{Two}\nconst a = Two\n"
---
----- SOURCE CODE
import other.{Two}
const a = Two


----- COMPILED JAVASCRIPT
import * as $other from "../other.mjs";
import { Two } from "../other.mjs";

const a = /* @__PURE__ */ new Two();
