compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__custom_types__constructor_as_value.snap
---
source: compiler-core/src/javascript/tests/custom_types.rs
assertion_line: 472
expression: "import other\npub fn main() {\n  other.Two\n}"
---
----- SOURCE CODE
import other
pub fn main() {
  other.Two
}

----- COMPILED JAVASCRIPT
import * as $other from "../other.mjs";

export function main() {
  return (var0, var1, var2) => { return new $other.Two(var0, var1, var2); };
}
